k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  labels:
    app: go-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: go-pod
  template:
    metadata:
      labels:
        app: go-pod
    spec:
      containers:
        - name: go-pod-container
          image: morphological-analysis
          ports:
            - containerPort: 8080
